--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,11 +11,17 @@ jobs:
     runs-on: ${{ matrix.goos }}
     strategy:
       matrix:
-        goos: [ubuntu-latest]
-        goarch: [amd64]
+        runner-os: [ubuntu-latest]
+        goos: [linux, darwin]
+        goarch: [amd64, arm64]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
           go-version: '>=1.18.0'
       - run: go version
+      - name:  Build vault
+        run: go build ./plugins/database/postgresql/postgresql-database-plugin -o cloudsql-iap-vault-plugin_$GOOS_$GOARCH
+        env:
+          GOOS: "{{ matrix.goos }}"
+          GOARCH: "{{ matrix.goarch }}"
